Example with 3D X working with asymmetric thinning in VoxelComplex.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,10 +9,10 @@ project(dgtal-play)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(DGtal REQUIRED)
-include_directories(${DGTAL_INCLUDE_DIRS})
+include_directories(SYSTEM ${DGTAL_INCLUDE_DIRS})
 find_package(ITK REQUIRED)
 include(${ITK_USE_FILE})
-include_directories(${ITK_INCLUDE_DIRS})
+include_directories(SYSTEM ${ITK_INCLUDE_DIRS})
 find_package(Qt5 REQUIRED
     Widgets
     Xml
@@ -22,16 +22,6 @@ add_executable(main main.cpp)
 target_link_libraries(main ${ITK_LIBRARIES} )
 target_link_libraries(main ${DGTAL_LIBRARIES} )
 target_link_libraries(main Qt5::Widgets Qt5::Xml )
-
-# add_executable(connected graph_connected_components.cpp)
-# target_link_libraries(connected ${ITK_LIBRARIES} )
-# target_link_libraries(connected ${DGTAL_LIBRARIES} )
-# target_link_libraries(connected Qt5::Widgets Qt5::Xml )
-
-# add_executable(testThin testThinning.cpp phcCCfunctions.h)
-# target_link_libraries(testThin ${ITK_LIBRARIES} )
-# target_link_libraries(testThin ${DGTAL_LIBRARIES} )
-# target_link_libraries(testThin Qt5::Widgets Qt5::Xml )
 
 add_executable(testVoxelThin testVoxelComplexThinning.cpp )
 target_link_libraries(testVoxelThin ${ITK_LIBRARIES} )
