--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
+#GitHub C++ gitignore
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+# Precompiled Headers
+*.gch
+*.pch
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+# Fortran module files
+*.mod
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+# Executables
+*.exe
+*.out
+*.app
+##########
+#Project#
+
+*.project
+*.cproject
 build*/*
+Session.vim
 *.pyc
+*.orig
+*.swp
+*.swo
+Session.vim
+.eclimrc
