Use boost::program_options.
Add some images.
Clean of dead code.

--- a/.gitignore
+++ b/.gitignore
@@ -24,14 +24,14 @@
 *.app
 ##########
 #Project#
-
-*.project
-*.cproject
-build*/*
-Session.vim
-*.pyc
-*.orig
+/build*
+#EDITORS#
 *.swp
 *.swo
+*.orig
+*.*.orig
 Session.vim
 .eclimrc
+*.project
+*.cproject
+*.ycm_extra_conf.pyc
