Update latest DGtal VoxelComplex changes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required(VERSION 2.8.2)
+cmake_minimum_required(VERSION 3.5)
 set(CMAKE_ECLIPSE_VERSION=4.4)
 # cmake_policy(SET CMP0012 NEW)
-if (UNIX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall -pedantic -Wextra -std=c++11")
-endif()
+# if (UNIX)
+#     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall -pedantic -Wextra")
+# endif()
 # cmake ../src  -G"Eclipse CDT4 - Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DCMAKE_ECLIPSE_GENERATE_SOURCE_PROJECT=TRUE
 project(dgtal-play)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
