Reduce graph working.
First transform obj to spatial graph.
Then remove extra edges due to object connectivity.
The removed edges are diagonal:
o
|\
o o o o o
The diagonal edge would be removed.
Then the new spatial graph can be reduced via dfs to remove the nodes
with only two neighbors (chain nodes).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required(VERSION 3.5)
-set(CMAKE_ECLIPSE_VERSION=4.4)
 # cmake_policy(SET CMP0012 NEW)
 # if (UNIX)
 #     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall -pedantic -Wextra")
@@ -7,6 +6,7 @@ set(CMAKE_ECLIPSE_VERSION=4.4)
 # cmake ../src  -G"Eclipse CDT4 - Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DCMAKE_ECLIPSE_GENERATE_SOURCE_PROJECT=TRUE
 project(dgtal-play)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_CXX_STANDARD 14)
 
 find_package(Boost COMPONENTS
         program_options
@@ -22,8 +22,13 @@ find_package(Qt5 REQUIRED
     Xml
     OpenGL)
 
+include_directories("./include")
+
 add_executable(thin thin.cpp)
 target_link_libraries(thin ${Boost_LIBRARIES} )
 target_link_libraries(thin ${ITK_LIBRARIES} )
 target_link_libraries(thin ${DGTAL_LIBRARIES} )
 target_link_libraries(thin Qt5::Widgets Qt5::Xml )
+
+enable_testing()
+add_subdirectory(test)
