--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(TEST_LIBRARIES ${Boost_LIBRARIES} ${DGTAL_LIBRARIES} Qt5::Widgets Qt5::Xml)
+set(TEST_LIBRARIES ${Boost_LIBRARIES} ${DGTAL_LIBRARIES} Qt5::Widgets Qt5::Xml ${VTK_LIBRARIES})
 add_executable(test_spatial_graph_reduction test_spatial_graph_reduction.cpp)
 target_link_libraries(test_spatial_graph_reduction ${TEST_LIBRARIES} ${ITK_LIBRARIES})
 
@@ -7,3 +7,7 @@ add_test(NAME spatial_graph_reduction COMMAND test_spatial_graph_reduction)
 add_executable(test_boost_city_visitor test_boost_city_visitor.cpp)
 target_link_libraries(test_boost_city_visitor ${TEST_LIBRARIES} ${ITK_LIBRARIES})
 add_test(NAME boost_city_visitor COMMAND test_boost_city_visitor)
+#
+add_executable(test_visualize_spatial_graph test_visualize_spatial_graph.cpp)
+target_link_libraries(test_visualize_spatial_graph ${TEST_LIBRARIES} ${ITK_LIBRARIES})
+add_test(NAME visualize_spatial_graph COMMAND test_visualize_spatial_graph)
