Add analyze graph and graphiz_io

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -4,10 +4,11 @@ target_link_libraries(test_spatial_graph_reduction ${TEST_LIBRARIES} ${ITK_LIBRA
 
 add_test(NAME spatial_graph_reduction COMMAND test_spatial_graph_reduction)
 
-add_executable(test_boost_city_visitor test_boost_city_visitor.cpp)
-target_link_libraries(test_boost_city_visitor ${TEST_LIBRARIES} ${ITK_LIBRARIES})
-add_test(NAME boost_city_visitor COMMAND test_boost_city_visitor)
-#
 add_executable(test_visualize_spatial_graph test_visualize_spatial_graph.cpp)
 target_link_libraries(test_visualize_spatial_graph ${TEST_LIBRARIES} ${ITK_LIBRARIES})
 add_test(NAME visualize_spatial_graph COMMAND test_visualize_spatial_graph)
+
+add_executable(test_graphviz_io test_graphviz_io.cpp)
+target_link_libraries(test_graphviz_io ${TEST_LIBRARIES} ${ITK_LIBRARIES} ${Boost_LIBRARIES})
+add_test(NAME graphviz_io COMMAND test_graphviz_io)
+
