Add histo.hpp and spatial_histograms
from phcerdan/histo-header (github)

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(TEST_LIBRARIES ${Boost_LIBRARIES} ${DGTAL_LIBRARIES} Qt5::Widgets Qt5::Xml ${VTK_LIBRARIES})
+
 add_executable(test_spatial_graph_reduction test_spatial_graph_reduction.cpp)
 target_link_libraries(test_spatial_graph_reduction ${TEST_LIBRARIES} ${ITK_LIBRARIES})
-
 add_test(NAME spatial_graph_reduction COMMAND test_spatial_graph_reduction)
 
 add_executable(test_visualize_spatial_graph test_visualize_spatial_graph.cpp)
@@ -12,3 +12,6 @@ add_executable(test_graphviz_io test_graphviz_io.cpp)
 target_link_libraries(test_graphviz_io ${TEST_LIBRARIES} ${ITK_LIBRARIES} ${Boost_LIBRARIES})
 add_test(NAME graphviz_io COMMAND test_graphviz_io)
 
+add_executable(test_spatial_histograms test_spatial_histograms.cpp)
+target_link_libraries(test_spatial_histograms ${TEST_LIBRARIES} ${ITK_LIBRARIES})
+add_test(NAME spatial_histograms COMMAND test_spatial_histograms)
