Add option:VISUALIZE [off]
VTK and QT depends on visualize

thin and analyze_graph have preprocessor variable
VISUALIZE
highlights_points, and some tests are disabled
depending on the variable

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ cmake_minimum_required(VERSION 3.5)
 # cmake ../src  -G"Eclipse CDT4 - Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DCMAKE_ECLIPSE_GENERATE_SOURCE_PROJECT=TRUE
 project(dgtal-play)
 option(ENABLE_TESTING "Enable Tests" OFF)
+option(VISUALIZE "Enable visualization with VTK and QT." OFF)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 14)
 
@@ -31,40 +32,42 @@ find_package(ITK REQUIRED COMPONENTS
 )
 include(${ITK_USE_FILE})
 include_directories(SYSTEM ${ITK_INCLUDE_DIRS})
-find_package(Qt5 REQUIRED
-    Widgets
-    Xml
-    OpenGL)
+if(VISUALIZE)
+    find_package(Qt5 REQUIRED
+        Widgets
+        Xml
+        OpenGL)
 
-# find_package(VTK REQUIRED)
-# find_package(VTK REQUIRED COMPONENTS
-#   vtkCommonCore
-#   vtkCommonDataModel
-#   vtkInteractionWidgets
-#   vtkRenderingCore
-#   vtkViewsInfovis
-#   CONFIG
-# )
+    # find_package(VTK REQUIRED)
+    # find_package(VTK REQUIRED COMPONENTS
+    #   vtkCommonCore
+    #   vtkCommonDataModel
+    #   vtkInteractionWidgets
+    #   vtkRenderingCore
+    #   vtkViewsInfovis
+    #   CONFIG
+    # )
 
-# VTK components to handle external dependency histo-header
-find_package(VTK REQUIRED COMPONENTS
-    vtkChartsCore
-    vtkCommonCore
-    vtkCommonDataModel
-    vtkInteractionStyle
-    vtkRenderingCore
-    vtkRenderingOpenGL2 # avoid vtkRenderer, vtkRenderWindow not found at run time
-    vtkRenderingContextOpenGL2 # avoid vtkContextDevice2D not found at run time
-    vtkViewsContext2D
-    vtkInteractionWidgets
-    vtkViewsInfovis
-    vtkGUISupportQt # QVTKWidget.h
-    CONFIG
-    )
-# USE_FILE is deprecated? This is the cause of AUTOINIT warnings
-# https://gitlab.kitware.com/vtk/vtk/issues/15895
-include(${VTK_USE_FILE})
-include_directories(SYSTEM ${VTK_INCLUDE_DIRS})
+    # VTK components to handle external dependency histo-header
+    find_package(VTK REQUIRED COMPONENTS
+        vtkChartsCore
+        vtkCommonCore
+        vtkCommonDataModel
+        vtkInteractionStyle
+        vtkRenderingCore
+        vtkRenderingOpenGL2 # avoid vtkRenderer, vtkRenderWindow not found at run time
+        vtkRenderingContextOpenGL2 # avoid vtkContextDevice2D not found at run time
+        vtkViewsContext2D
+        vtkInteractionWidgets
+        vtkViewsInfovis
+        vtkGUISupportQt # QVTKWidget.h
+        CONFIG
+        )
+    # USE_FILE is deprecated? This is the cause of AUTOINIT warnings
+    # https://gitlab.kitware.com/vtk/vtk/issues/15895
+    include(${VTK_USE_FILE})
+    include_directories(SYSTEM ${VTK_INCLUDE_DIRS})
+endif()
 
 set(SG_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
 include_directories(${SG_INCLUDE_DIR})
@@ -126,36 +129,48 @@ target_include_directories(SG PUBLIC
   $<INSTALL_INTERFACE:include>  # <prefix>/include
   )
 target_link_libraries(SG ${Boost_LIBRARIES} histo )
+ 
+if(VISUALIZE)
+    add_library(SGVtk ${SG_SRC_WITH_VTK})
+    target_include_directories(SGVtk PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>  # <prefix>/include/mylib
+        )
+    target_link_libraries(SGVtk ${Boost_LIBRARIES} ${VTK_LIBRARIES} )
+    target_compile_definitions(SGVtk PRIVATE VISUALIZE)
+endif()
 
-add_library(SGVtk ${SG_SRC_WITH_VTK})
-target_include_directories(SGVtk PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>  # <prefix>/include/mylib
-  )
-target_link_libraries(SGVtk ${Boost_LIBRARIES} ${VTK_LIBRARIES} )
 
 add_executable(thin thin.cpp)
 target_link_libraries(thin ${Boost_LIBRARIES} )
 target_link_libraries(thin ${ITK_LIBRARIES} )
 target_link_libraries(thin ${DGTAL_LIBRARIES} )
-target_link_libraries(thin Qt5::Widgets Qt5::Xml )
-target_link_libraries(thin ${VTK_LIBRARIES} )
+if(VISUALIZE)
+    target_link_libraries(thin Qt5::Widgets Qt5::Xml )
+    target_link_libraries(thin ${VTK_LIBRARIES} )
+    target_compile_definitions(SGVtk PRIVATE VISUALIZE)
+endif()
 
 add_executable(analyze_graph analyze_graph.cpp)
 target_link_libraries(analyze_graph SG )
-target_link_libraries(analyze_graph SGVtk )
 target_link_libraries(analyze_graph ${Boost_LIBRARIES} )
 target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
 target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
-target_link_libraries(analyze_graph Qt5::Widgets Qt5::Xml )
-# target_link_libraries(analyze_graph ${VTK_LIBRARIES} )
+if(VISUALIZE)
+    target_link_libraries(analyze_graph Qt5::Widgets Qt5::Xml )
+    target_link_libraries(analyze_graph SGVtk )
+    # target_link_libraries(analyze_graph ${VTK_LIBRARIES} )
+    target_compile_definitions(SGVtk PRIVATE VISUALIZE)
+endif()
 
-add_executable(highlight_image_points highlight_image_points.cpp)
-target_link_libraries(highlight_image_points ${Boost_LIBRARIES} )
-target_link_libraries(highlight_image_points ${ITK_LIBRARIES} )
-target_link_libraries(highlight_image_points ${DGTAL_LIBRARIES} )
-target_link_libraries(highlight_image_points Qt5::Widgets Qt5::Xml )
-target_link_libraries(highlight_image_points ${VTK_LIBRARIES} )
+if(VISUALIZE)
+    add_executable(highlight_image_points highlight_image_points.cpp)
+    target_link_libraries(highlight_image_points ${Boost_LIBRARIES} )
+    target_link_libraries(highlight_image_points ${ITK_LIBRARIES} )
+    target_link_libraries(highlight_image_points ${DGTAL_LIBRARIES} )
+    target_link_libraries(highlight_image_points Qt5::Widgets Qt5::Xml )
+    target_link_libraries(highlight_image_points ${VTK_LIBRARIES} )
+endif()
 
 if(ENABLE_TESTING)
     enable_testing()
