BUG: add compile_definition to thin and analyze

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -154,7 +154,7 @@ target_link_libraries(thin ${DGTAL_LIBRARIES} )
 if(VISUALIZE)
     target_link_libraries(thin Qt5::Widgets Qt5::Xml )
     target_link_libraries(thin ${VTK_LIBRARIES} )
-    target_compile_definitions(SGVtk PRIVATE VISUALIZE)
+    target_compile_definitions(thin PUBLIC VISUALIZE)
 endif()
 
 add_executable(analyze_graph analyze_graph.cpp)
@@ -166,7 +166,7 @@ if(VISUALIZE)
     target_link_libraries(analyze_graph Qt5::Widgets Qt5::Xml )
     target_link_libraries(analyze_graph SGVtk )
     # target_link_libraries(analyze_graph ${VTK_LIBRARIES} )
-    target_compile_definitions(SGVtk PRIVATE VISUALIZE)
+    target_compile_definitions(analyze_graph PUBLIC VISUALIZE)
 endif()
 
 add_executable(histograms_from_data histograms_from_data.cpp)
