--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/external/histo"]
-	path = src/external/histo
+[submodule "external/histo"]
+	path = external/histo
 	url = https://github.com/phcerdan/histo-header
