Copy analyze_graph into full graph, avoiding reducing step
Requested by Megan

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -20,6 +20,18 @@ if(VISUALIZE)
     target_compile_definitions(analyze_graph PUBLIC VISUALIZE)
 endif()
 
+add_executable(full_graph full_graph.cpp)
+target_link_libraries(full_graph SG )
+target_link_libraries(full_graph ${Boost_LIBRARIES} )
+target_link_libraries(full_graph ${ITK_LIBRARIES} )
+target_link_libraries(full_graph ${DGTAL_LIBRARIES} )
+if(VISUALIZE)
+    target_link_libraries(full_graph Qt5::Widgets Qt5::Xml )
+    target_link_libraries(full_graph SGVtk )
+    # target_link_libraries(full_graph ${VTK_LIBRARIES} )
+    target_compile_definitions(full_graph PUBLIC VISUALIZE)
+endif()
+
 add_executable(histograms_from_data histograms_from_data.cpp)
 target_link_libraries(histograms_from_data SG )
 target_link_libraries(histograms_from_data ${Boost_LIBRARIES} )
