Refactor filter_spatial_graph, move to cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,7 @@ set(SG_SRC_WITH_BOOST
     ${SG_SRC_DIR}/spatial_histograms.cpp
     ${SG_SRC_DIR}/split_loop.cpp
     ${SG_SRC_DIR}/reduce_spatial_graph_via_dfs.cpp
+    ${SG_SRC_DIR}/filter_spatial_graph.cpp
     # not requiring boost
     ${SG_SRC_DIR}/graph_data.cpp
     )
